🎮 添加网络优化和自定义规则功能
✨ 新功能:
- 网络优化系统: 智能断线重连、离线操作缓存、数据冲突解决
- 自定义规则系统: 完整的规则编辑器、预设模板、规则分享
- 增强的房间管理: 快速匹配、房间浏览、观战支持
- 游戏内网络状态监控: 实时网络状态显示和手动同步

🔧 技术改进:
- 完善的Supabase操作封装层
- 类型安全的数据库操作
- 统一的错误处理机制
- CSS兼容性检查工具

📝 文档完善:
- 功能对比分析文档
- 详细使用指南
- 技术架构说明

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "css:check": "node scripts/css-compat-checker.js",
+    "css:fix": "npm run css:check && echo '\nCSS修复已生成，请查看 css-compat-fixes-generated.css'",
+    "build:compat": "BROWSERSLIST_ENV=compat npm run build",
+    "build:modern": "BROWSERSLIST_ENV=modern npm run build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -42,7 +46,6 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.57.4",
     "@vercel/analytics": "1.3.1",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -72,7 +75,9 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "postcss": "^8.5",
+    "postcss-preset-env": "^10.3.1",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
