--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:e2e": "playwright test",
+    "test:coverage": "jest --coverage",
+    "test:all": "npm run test && npm run test:e2e",
     "css:check": "node scripts/css-compat-checker.js",
     "css:fix": "npm run css:check && echo '\nCSS修复已生成，请查看 css-compat-fixes-generated.css'",
     "build:compat": "BROWSERSLIST_ENV=compat npm run build",
@@ -52,6 +57,7 @@
     "date-fns": "4.1.0",
     "dotenv": "^17.2.2",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.16",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -72,14 +78,18 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "jest": "^30.1.3",
     "postcss": "^8.5",
     "postcss-preset-env": "^10.3.1",
     "tailwindcss": "^4.1.9",
+    "ts-jest": "^29.4.3",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
